# ta

./: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: .env.example  README.md  pyproject.toml
backend/app/: cli.py  dependencies.py  main.py
backend/app/agents/: assist_graph.py  improvement_tutor.py  ocr.py  stt.py  vision_llm.py
backend/app/chroma/: client.py  cluster_store.py  material_store.py
backend/app/core/: config.py  security.py
backend/app/db/: client.py  mongo_schema.py
backend/app/db/collections/: __init__.py  base.py  cluster.py  cluster_weekly_stats.py  course.py  course_material.py  institution.py  message.py  professor_course.py  question.py  session.py  student_course.py  user.py  user_institution.py  weekly_improvements.py
backend/app/db/documents/: __init__.py  user.py
backend/app/file_storage/: r2.py
backend/app/repositories/: cluster_repository.py  cluster_weekly_stats_repository.py  course_material_repository.py  course_repository.py  institution_repository.py  message_repository.py  session_repository.py  user_repository.py  weekly_improvements_repository.py
backend/app/routes/: analytics.py  assist.py  auth.py  catalog.py  course_materials.py  session.py
backend/app/schemas/: analytics.py  auth.py  auth_context.py  capture.py  catalog.py  course_material.py  session.py
backend/app/services/: analytics_service.py  assist_service.py  auth_service.py  catalog_service.py  course_material_service.py  session_service.py
electron/: ipc.ts  main.ts  nativeAudio.ts  preload.ts
(+65 files in other folders)
